<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smarty Alarm</string>
    <string name="action_add_alarm">Add An Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="no_alarms">You have no alarms. Click the add an alarm icon in the action bar! :)</string>
    <string name="initial_date">1 April 2004</string>
    <string name="challengeEnabledOne">At least one should be checked</string>

    <!-- Challenges -->
    <string name="taptap">Tap Tap</string>
    <string name="math">Math in the Morning</string>
    <string name="word">Repeat the Words</string>
    <string name="wakeathon">Wakeathon</string>

    <!-- Add Alarm -->
    <string name="create_new_alarm">Create New Alarm</string>
    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="untitled">Untitled</string>
    <string name="snooze">Snooze</string>
    <string name="minutes">Min</string>
    <string name="seconds">Sec</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <!-- Alarm -->
    <string name="dismiss">Dismiss</string>
    <string name="alarm">Alarm!</string>

    <!-- Prompt -->
    <string name="add_alarm_success">Add an alarm successful!</string>
    <string name="update_alarm_success">Update an alarm successful!</string>

    <!-- Alarm Adapter -->
    <string name="initial_time">00:00</string>
    <string name="initial_name">Untitled</string>
    <string name="sunday">Su</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="dayTimeAM">am</string>
    <string name="dayTimePM">pm</string>
    <string name="snooze_adapter">Snooze:</string>

    <!-- AlarmScreenCircleActivity -->
    <string name="tap_me">Tap me </string>
    <string name="tap_more"> more times!</string>
    <string name="timer">sec remaining</string>

    <!-- AlarmScreenMathActivity -->
    <string name="math_value">0</string>

    <string-array name="math_operators">
        <item>+</item>
        <item>-</item>
        <item>*</item>
    </string-array>

    <!-- AlarmScreenWordActivity -->
    <string-array name="alphabet">
        <item>a</item>
        <item>b</item>
        <item>c</item>
        <item>d</item>
        <item>e</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>i</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>m</item>
        <item>n</item>
        <item>o</item>
        <item>p</item>
        <item>q</item>
        <item>r</item>
        <item>s</item>
        <item>t</item>
        <item>u</item>
        <item>v</item>
        <item>w</item>
        <item>x</item>
        <item>y</item>
        <item>z</item>
    </string-array>

    <!-- AlarmScreenWakeathon -->
    <string name="walk">Start walking to disable the alarm! </string>
    <string name="wake_up">Are you starting to wake up?</string>
    <string name="keep_walking">Just a little more, my friend; appreciate the new day! :)</string>
    <string name="shake">Now shake the device until the alarm turns off</string>
    <string name="walk_start">Click here \nto start </string>
    <string name="three_meters">3 meters remaining</string>

    <!-- Alarm Screen General -->
    <string name="answer_hint">Answer Here</string>
    <string name="submit">Submit</string>
    <string name="answers_remaining">Correct Answers Remaining</string>

    <!-- Notification -->
    <string name="notif_title">Alarm set!</string>
    <string name="title_activity_alarm_screen_math">AlarmScreenMathActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- Errors -->
    <string name="empty_edit_text">Please enter a value</string>
    <string name="title_activity_alarm_screen_word">AlarmScreenWordActivity</string>
    <string name="title_activity_alarm_screen_wakeathon">AlarmScreenWakeathonActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>