<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textlines_with_border"
    android:padding="@dimen/activity_horizontal_margin" >

    <LinearLayout
        android:id="@+id/alarm_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/alarm_screen_buttons_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_small_horizontal_margin"
            android:text="@string/alarm"
            android:textColor="@color/darkGray"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/alarm_screen_buttons_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_very_small_horizontal_margin"
            android:text="@string/initial_name"
            android:textColor="@color/darkGray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/alarm_screen_buttons_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/initial_time"
            android:textColor="@color/darkGray"
            android:textSize="65sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/motivational_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/constants"
        android:layout_below="@+id/alarm_details"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="The whole secret of a successful life is to find out what is one&apos;s destiny to do, and then do it. ~Henry Ford"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/darkGray"
        android:textStyle="italic|bold" />

    <Button
        android:id="@+id/alarm_dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/motivational_quote"
        android:layout_marginTop="@dimen/activity_small_vertical_margin"
        android:text="@string/dismiss"
        android:textSize="24sp" />

    <Button
        android:id="@+id/alarm_snooze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarm_dismiss"
        android:text="@string/snooze"
        android:textSize="24sp" />

</RelativeLayout>