<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="@dimen/activity_horizontal_margin" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="@dimen/activity_horizontal_margin"
            tools:context=".AlarmDetailsActivity" >

            <TimePicker
                android:id="@+id/alarm_details_time_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/alarm_details_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alarm_details_time_picker"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:ems="10"
                android:hint="@string/details_alarm_name" />

            <View
                android:id="@+id/divider2"
                style="@style/Divider"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/alarm_details_name" />

            <com.martyawesome.smartyalarm.ui.CustomSwitch
                android:id="@+id/alarm_details_repeat_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/divider2"
                android:checked="true"
                android:text="@string/details_repeat_weekly" />

            <View
                android:id="@+id/divider1"
                style="@style/Divider"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/alarm_details_repeat_weekly" />

            <com.martyawesome.smartyalarm.ui.CustomSwitch
                android:id="@+id/alarm_details_repeat_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/divider1"
                android:checked="true"
                android:text="@string/details_sunday" />

            <com.martyawesome.smartyalarm.ui.CustomSwitch
                android:id="@+id/alarm_details_repeat_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/alarm_details_repeat_sunday"
                android:layout_below="@+id/alarm_details_repeat_sunday"
                android:checked="true"
                android:text="@string/details_monday" />

            <com.martyawesome.smartyalarm.ui.CustomSwitch
                android:id="@+id/alarm_details_repeat_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/alarm_details_repeat_monday"
                android:layout_below="@+id/alarm_details_repeat_monday"
                android:checked="true"
                android:text="@string/details_tuesday" />

            <com.martyawesome.smartyalarm.ui.CustomSwitch
                android:id="@+id/alarm_details_repeat_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/alarm_details_repeat_tuesday"
                android:layout_below="@+id/alarm_details_repeat_tuesday"
                android:checked="true"
                android:text="@string/details_wednesday" />

            <com.martyawesome.smartyalarm.ui.CustomSwitch
                android:id="@+id/alarm_details_repeat_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/alarm_details_repeat_wednesday"
                android:layout_below="@+id/alarm_details_repeat_wednesday"
                android:checked="true"
                android:text="@string/details_thursday" />

            <com.martyawesome.smartyalarm.ui.CustomSwitch
                android:id="@+id/alarm_details_repeat_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/alarm_details_repeat_thursday"
                android:layout_below="@+id/alarm_details_repeat_thursday"
                android:checked="true"
                android:text="@string/details_friday" />

            <com.martyawesome.smartyalarm.ui.CustomSwitch
                android:id="@+id/alarm_details_repeat_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/alarm_details_repeat_friday"
                android:layout_below="@+id/alarm_details_repeat_friday"
                android:checked="true"
                android:text="@string/details_saturday" />

            <View
                android:id="@+id/divider4"
                style="@style/Divider"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/alarm_details_repeat_saturday" />

            <LinearLayout
                android:id="@+id/alarm_ringtone_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/divider4"
                android:background="@color/colorScheme"
                android:orientation="vertical"
                android:padding="@dimen/activity_small_horizontal_margin" >

                <TextView
                    android:id="@+id/alarm_label_tone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/details_alarm_tone"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/alarm_label_tone_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/details_alarm_tone_default"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:id="@+id/divider3"
                style="@style/Divider"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/alarm_ringtone_container" />

            <LinearLayout
                android:id="@+id/snooze_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/divider3"
                android:layout_marginTop="@dimen/activity_small_vertical_margin"
                android:background="@color/dirtyWhite"
                android:orientation="vertical"
                android:padding="@dimen/activity_small_horizontal_margin" >

                <CheckBox
                    android:id="@+id/snooze"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/snooze" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>