<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:padding="@dimen/activity_horizontal_margin" >

    <LinearLayout
        android:id="@+id/alarm_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/alarm_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_small_horizontal_margin"
            android:text="@string/alarm"
            android:textColor="@color/darkGray"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/alarm_screen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_very_small_horizontal_margin"
            android:text="@string/initial_name"
            android:textColor="@color/darkGray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/alarm_screen_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/initial_time"
            android:textColor="@color/darkGray"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/math_corrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/darkGray"
            android:textSize="16sp" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_small_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/colorScheme"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_small_horizontal_margin" >

            <TextView
                android:id="@+id/math_value_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/math_value"
                android:textColor="@android:color/white"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/math_operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/math_value_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/math_value"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textSize="40sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:textSize="18sp"
            android:hint="@string/answer_hint"
            android:inputType="number"
            android:ems="10" >
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/math_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/submit" />

    </LinearLayout>

</RelativeLayout>